<!--
  ~  Copyright (c) 2015.
  ~
  ~  This program is free software; you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation; either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License along
  ~  with this program; if not, write to the Free Software Foundation, Inc.,
  ~  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  ~
  -->
<resources>
    <string name="app_name">Mahjong Hand Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menzen_tsumo">Menzen Tsumo</string>
    <string name="menzen_tsumo_description">This yaku may apply to any closed hand. Any player who draws a winning tile with a closed hand is awarded this yaku</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_score_hand">Score Hand</string>
    <string name="navigation_yaku_list">Yaku</string>
    <string name="han">Han</string>
    <string name="fu">Fu</string>
    <string name="placeholder">Placeholder</string>
    <string name="dealer">Dealer</string>
    <string name="kiriage">Kiriage</string>

    <array name="hanValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13+</item>
    </array>

    <array name="fuValues">
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
    </array>
</resources>
